mail service added, fix user model (add email)
