# internal/model/user.go
@@ -3,18 +3,18 @@ package model
 import "time"
 
 type At struct {
-	CreatedAt *time.Time
-	UpdatedAt *time.Time
-	DeletedAt *time.Time
+	CreatedAt *time.Time `json:"created_at,omitempty"`
+	UpdatedAt *time.Time `json:"updated_at,omitempty"`
+	DeletedAt *time.Time `json:"deleted_at,omitempty"`
 }
 
 type User struct {
-	ID        string
-	FirstName *string
-	LastName  *string
-	Email     *string
+	ID        string  `json:"id,omitempty"`
+	FirstName *string `json:"first_name,omitempty"`
+	LastName  *string `json:"last_name,omitempty"`
+	Email     *string `json:"email,omitempty"`
 
-	HashedRefreshToken *string
+	HashedRefreshToken *string `json:"-"`
 
 	At
 }
